# chemotion-converter-app

./: .dockerignore  .env.dev  .env.doc  .env.prod  .env.sample  .gitignore  .pylintrc  ChemConverterApp.spec  Dockerfile  Dockerfile.Test_Results  Dockerfile.p2d  MANIFEST.in  README.md  TEST_STRATEGY.md  config.yml.example  dependencies.list  docker-compose.ms_converter.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  sample.txt  setup.py
.devcontainer/: Dockerfile.devcontainer  devcontainer.json
.github/workflows/: build_executable.yml  pylint.yml  pytest.yml
build_utils/: github.py
client_build/: index.html  index.js
client_build/admin/: index.css  index.html  index.js  index.js.LICENSE.txt
converter_app/: __init__.py  __main__.py  app.py  converters.py  datasets.py  files.py  models.py  options.py  package_metadata.py  router.py  scripts.py  tests.py  utils.py
converter_app/converters/: __init__.py  base.py
converter_app/profile_migration/: 20250429144529_migration.py  20250429151003_migration.py  20250507140000_migration.py  20250523125234_migration.py  20250822110356_migration.py  20250908063445_migration.py  20251031061716_migration.py  20251119072527_migration.py  20260113143334_migration.py  20260319060352_migration.py  20260323144702_migration.py  20260401123327_migration.py  20260417132254_migration.py  20260422063146_migration.py  20260430125545_migration.py  20260506160404_migration.py  20260513094819_migration.py  __init__.py
converter_app/profile_migration/utils/: MIGRATION_TEMPLATE.py.txt  base_migration.py  registration.py
converter_app/rdf/: __init__.py  rdf_terms_info_default.json
converter_app/reader_jsons/: gcd.json
converter_app/readers/: __init__.py  ae_cms.py  afm.py  aif.py  asc_zip.py  ascii.py  ascii_zip.py  base.py  bio_logic_reader.py  brml.py  brucker_dotzero.py  cary.py  cfx.py  cif.py  csm.py  csv.py  csv_reader.py  delfin_reader.py  dm3_reader.py  dsp.py  dta.py  dwl.py  ea_pdf.py  ebl.py  excel.py  gcd.py  gcode_reader.py  generic.py  hplc.py  hplc_reader.py  html.py  jasco.py  jcamp_conv_reader.py  json_reader.py  jws.py  lcms_reader.py  lithoz_pdf.py  mpl.py  mpr.py  mps.py  (+19 more)
converter_app/readers/helper/: READER_TEMPLATE.py.txt  TEST_TEMPLATE.py.txt  __init__.py  asc_helper.py  base.py  ms_helper.py  reader.py  time_interpreter.py  unit_converter.py  unit_finder.py
converter_app/validation/: __init__.py  registry.py
converter_app/validation/schemas/: imports.py  schema_data_tables.py  schema_identifiers.py  schema_input_tables.py  schema_profile.py  schema_tables.py
converter_app/writers/: base.py  jcamp.py  jcampzip.py  meta_info_json.py  rdf.py
docu/: MIGRATION.md  TEST_STRATEGY.md
etc/nginx/sites-available/: default
etc/tmpfiles.d/: chemotion-converter-app.conf
etc_doc/: entrypoint.sh
etc_doc/nginx/sites-available/: default
etc_doc/systemd/system/: chemotion-converter.service
etc_doc/tmpfiles.d/: chemotion-converter.conf
licenses/: THIRD_PARTY_NOTICES.json  THIRD_PARTY_NOTICES.md
readers/dev/: da76eaf3-95cd-4c0b-9348-e39a45c2ccbe.json  dce9aee4-8c59-46f3-9391-bdccee3f5ce6.json
requirements/: BinaryParser-0.0.1-cp312-cp312-linux_x86_64.whl  common.txt  default.txt  dev.txt
requirements/BinaryParser_wheels/: BinaryParser-0.0.1-cp310-cp310-linux_x86_64.whl  BinaryParser-0.0.1-cp311-cp311-linux_x86_64.whl  BinaryParser-0.0.1-cp38-cp38-linux_x86_64.whl  BinaryParser-0.0.1-cp39-cp39-linux_x86_64.whl
scripts/: update_profiles.py  update_profiles_2022-04-08.py
test_files/ChemConverter/: Readme.md
test_files/profiles/dev/: 0d7dd8d4-a599-4151-855e-643956a7362c.json  15400217-b730-47db-9d5c-a300bce7ae95.json  fb19f78e-8d87-4c5f-a4e1-ac90994300d7.json
test_files/profiles/test/: 0cd6596c-83d2-49ab-a982-1dfec98d16ba.json  0d04f3c5-43d4-408a-85ef-34b33975020a.json  0d7dd8d4-a599-4151-855e-643956a7362c.json  15400217-b730-47db-9d5c-a300bce7ae95.json  2a913039-c48d-4fd5-9fbb-706733e53f76.json  3e2fb90e-b6b6-4152-9182-ed8e203a58b5.json  44f5bfbb-ae1f-4da0-b43b-0d33b649c24a.json  5a413afd-cb77-40e4-99b1-c044d94eaa51.json  5b206281-49f6-437b-99ca-c64a621eb903.json  5cb879d1-2b3f-4778-8e06-1a198500c8db.json  6bb4fea5-3a59-4b95-8956-d977a4d8b6a7.json  6be46fd7-59a2-4b02-829b-cbfef8c19646.json  6d344bc4-c4fb-4306-9d56-1e754e7e0590.json  71883827-4472-48d8-becf-64ea89324f3e.json  799f3db4-fd21-4aa7-a7bd-7c5548cbe316.json  8079b064-6314-4d99-b13b-e4f590cf556f.json  CVprofile_Nova.json  CVprofile_pssession.json  a5b05507-aed2-462b-a526-3fee53c87a48.json  af891148-ebcc-4e5d-a481-fa6acc853699.json  b31ef3df-eacf-4440-bbb3-34b073be9eb9.json  (+15 more)
test_manager/: __init__.py  __main__.py  cli_manager.py  profile_test_generator.py  test_file_manager.py  test_readers.py  utils.py  utils_test.py
test_static/: check_profile_results_diff.py  test_bio_logic_reader.py  test_converter.py  test_data_operator.py  test_gcode_reader.py  test_lcms_reader.py  test_profile_migration_resume.py  test_regex.py  test_squid_reader.py  test_tif_reader.py  test_units.py  tests.py  utils.py
test_static/a/: a.txt.0  c01ae8dc-b0fa-40c8-b894-7765f2b58c2e.json  test_file.csv
test_static/test_files/: bio_logic_FK155_JLGU_GE_50-2_15_m1p233mg_Li_LP30_RT_rate_stability_20230906.tar.xz  tif_Kleiner Hund A011.tif  tif_Kleiner.Hund.A007.tif
tests/: conftest.py  test_cif.py  test_gcd.py  test_generic.py
tests/sample_files/: EF-R94.3-40h__GC-BID_inc-5min-30_GC-3min-40-7min-180-2min_Calibrated_292023_904_003.gcd.txt  SG-V3545-6-13.cif  SG-V3545-6-13_small.cif  SG-V3551-15-19.cfx_LANA
(+1020 files in other folders)
