[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chemotion-converter-app"
version = "1.7.0"
authors = [{ name = "Nicole Jung", email = "nicole.jung@kit.edu" }]
requires-python = ">= 3.12"
description = "A backend service to interconvert chemistry-related files."
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["chemistry", "convert", "file", "format"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]



dependencies = [
    "defusedxml==0.*",
    "Flask==2.*",
    "Flask-Cors==6.*",
    "Flask-HTTPAuth==4.*",
    "gunicorn==22.*",
    "openpyxl==3.*",
    "python-dotenv==0.*",
    "python-magic==0.*",
    "gemmi==0.*",
    "xlrd==2.*",
    "Werkzeug==3.*",
    "jcamp==1.*",
    "PyMuPDF==1.26.7",
    "pylint==3.*",
    "str2bool==1.*",
    "opusFC==1.*",
    "referencing==0.36.*",
    "jsonschema==4.*",
    "pybind11==3.*",
    "yadg==6.2.2",
    "numpy==2.*",
    "xmltodict==0.14.*",
    "binaryparser @ git+https://github.com/StarmanMartin/BinaryParser@main",
    "rdflib==7.5.*",
    "GitPython==3.1.*",
    "requests==2.32.*"
]

[project.optional-dependencies]
# prod is the production installation till https://github.com/pypa/pip/issues/11440 gets solved
prod = [
]
dev = [
    "coverage",
    "pytest",
    "pytest-dotenv",
    "pytest-cov",
    "pytest-flask",
    "GitPython",
    "wheel",
    "setuptools",
    "jinja2",
    "pytest-timeout",
    "pyinstaller"
]

[project.urls]
homepage = "https://chemotion.net/docs/services/chemconverter"
repository = "https://github.com/ComPlat/chemotion-converter-app"

[tool.setuptools.packages.find]
include = ["converter_app*"]