[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chemotion-converter-app"
version = "1.9.2"
authors = [{ name = "Nicole Jung", email = "nicole.jung@kit.edu" }]
requires-python = ">= 3.12"
description = "A backend service to interconvert chemistry-related files."
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["chemistry", "convert", "file", "format"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]



dependencies = [
    "defusedxml==0.*",
    "Flask==3.1.*",
    "Flask-Cors==6.*",
    "Flask-HTTPAuth==4.*",
    "gunicorn==25.*",
    "openpyxl==3.*",
    "olefile==0.*",
    "Pillow==11.*",
    "python-dotenv==1.*",
    "python-magic==0.*; platform_system != 'Windows'",
    "python-magic-bin==0.*; platform_system == 'Windows'",
    "gemmi==0.*",
    "xlrd==2.*",
    "Werkzeug==3.*",
    "jcamp==1.2.2",
    "PyMuPDF==1.26.7",
    "pylint==4.*",
    "str2bool==1.*",
    "opusFC==1.*",
    "referencing==0.37.*",
    "jsonschema==4.*",
    "pybind11==3.*",
    "yadg==6.2.3",
    "numpy==2.*",
    "xmltodict==1.*",
    "binaryparser @ git+https://github.com/ComPlat/BinaryParser.git@v1.4.0",
    "rdflib==7.*",
    "GitPython==3.1.*",
    "requests==2.32.*",
    "click==8.3.*",
    "jsonpatch==1.33",
    "astropy~=8.0.0"
]

[project.optional-dependencies]
# prod is the production installation till https://github.com/pypa/pip/issues/11440 gets solved
prod = [
]
dev = [
    "coverage",
    "pytest",
    "pytest-dotenv",
    "pytest-cov",
    "pytest-flask",
    "GitPython",
    "wheel",
    "setuptools",
    "jinja2",
    "pytest-timeout",
    "pyinstaller",
    "pip-licenses"
]

[project.urls]
homepage = "https://chemotion.net/docs/services/chemconverter"
repository = "https://github.com/ComPlat/chemotion-converter-app"

[tool.setuptools.packages.find]
include = ["converter_app*"]
